--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Cross-ref-cli specific
+# Ignore all files in documents folder except .gitkeep
+documents/*
+!documents/.gitkeep
+
+# FAISS database files
+*.faiss
+*.index
+*.metadata.txt
+
+# Generated CSV outputs
+*_comparison_*.csv
