005 Poor results with NLI

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 # Core dependencies for cross-ref-cli
 
+# Transformers for NLI models (also used by sentence-transformers)
+transformers>=4.30.0
+torch>=2.0.0
+
 # Sentence transformers for embeddings
 sentence-transformers>=2.2.0
 
